// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepRemuneration /> should render multiple inputs 1`] = `
<div>
  <legend
    class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
    data-testid="question-label"
  >
    <span
      class="sc-3633cc97-0 eiVtrx"
    >
      Comment souhaitez-vous indiquer la rémunération perçue pendant le contrat de travail ?
      <span
        class="sc-3633cc97-0 hpZWjW"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-f2c30c13-1 cRwNeF"
  >
    <input
      class="sc-f2c30c13-2 bKCzpJ"
      id="typeRemuneration-amount"
      name="typeRemuneration"
      type="radio"
      value="total"
    />
    <label
      class="sc-f2c30c13-0 ebobyG"
      for="typeRemuneration-amount"
    >
      <span>
        En indiquant le
        <strong>
           montant total 
        </strong>
        des rémunérations.
      </span>
    </label>
  </div>
  <div
    class="sc-f2c30c13-1 cRwNeF"
  >
    <input
      checked=""
      class="sc-f2c30c13-2 bKCzpJ"
      id="typeRemuneration-pay"
      name="typeRemuneration"
      type="radio"
      value="mensuel"
    />
    <label
      class="sc-f2c30c13-0 ebobyG"
      for="typeRemuneration-pay"
    >
      <span>
        En indiquant le
        <strong>
           salaire mensuel 
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <legend
    class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
    data-testid="question-label"
  >
    <span
      class="sc-3633cc97-0 eiVtrx"
    >
      Quels sont les salaires mensuels bruts perçus durant le contrat de travail ?
      <span
        class="sc-3633cc97-0 hpZWjW"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-a2eff38b-2 fQvuKl"
  >
    <label
      class="sc-a2eff38b-0 famBqO"
      for="2"
    >
      Montant :
    </label>
    <div
      class="sc-d7c10f93-0 kgLXdV"
    >
      <div
        class="sc-669fe731-0 amSvQ"
      >
        <input
          class="sc-669fe731-1 htKjGt"
          id="2"
          name="salaires[0].salaire"
          type="number"
          value="2000"
        />
        <div
          class="sc-669fe731-2 kODRkJ"
        >
          <span>
            €
          </span>
        </div>
      </div>
    </div>
    <button
      class="sc-95bd4344-0 dxXsic sc-a2eff38b-1 cannHC"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-88652f35-1 hhzrTN"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <div
    class="sc-a2eff38b-2 fQvuKl"
  >
    <label
      class="sc-a2eff38b-0 famBqO"
      for="4"
    >
      Montant :
    </label>
    <div
      class="sc-d7c10f93-0 kgLXdV"
    >
      <div
        class="sc-669fe731-0 amSvQ"
      >
        <input
          class="sc-669fe731-1 htKjGt"
          id="4"
          name="salaires[1].salaire"
          type="number"
          value="1500"
        />
        <div
          class="sc-669fe731-2 kODRkJ"
        >
          <span>
            €
          </span>
        </div>
      </div>
    </div>
    <button
      class="sc-95bd4344-0 dxXsic sc-a2eff38b-1 cannHC"
      type="button"
    >
      Supprimer
      <svg
        aria-hidden="true"
        class="sc-88652f35-1 hhzrTN"
        fill="none"
        viewBox="0 0 32 32"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14.752 16.5 7.258 8.591A.957.957 0 0 1 7 7.932c0-.247.093-.484.259-.659A.858.858 0 0 1 7.883 7a.86.86 0 0 1 .625.273L16 15.183l7.492-7.91A.859.859 0 0 1 24.117 7c.234 0 .459.098.624.273a.957.957 0 0 1 .259.659.957.957 0 0 1-.259.66L17.249 16.5l7.492 7.909a.958.958 0 0 1 .259.659.957.957 0 0 1-.259.659.859.859 0 0 1-.624.273.86.86 0 0 1-.625-.273L16 17.817l-7.492 7.91a.859.859 0 0 1-.625.273.859.859 0 0 1-.624-.273.957.957 0 0 1-.259-.659.96.96 0 0 1 .259-.66l7.492-7.908z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </button>
  </div>
  <button
    class="sc-95bd4344-0 dxXsic sc-88652f35-0 jXCgfW"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="sc-88652f35-2 bpyfbF"
      fill="none"
      viewBox="0 0 16 16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M8 2a1 1 0 0 0-1 1v4H3a1 1 0 0 0 0 2h4v4a1 1 0 1 0 2 0V9h4a1 1 0 1 0 0-2H9V3a1 1 0 0 0-1-1z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    Ajouter un salaire
  </button>
  <p
    class="sc-967f95b8-4 bNAzKG"
  >
    Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;

exports[`<StepRemuneration /> should render one input 1`] = `
<div>
  <legend
    class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
    data-testid="question-label"
  >
    <span
      class="sc-3633cc97-0 eiVtrx"
    >
      Comment souhaitez-vous indiquer la rémunération perçue pendant le contrat de travail ?
      <span
        class="sc-3633cc97-0 hpZWjW"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-f2c30c13-1 cRwNeF"
  >
    <input
      checked=""
      class="sc-f2c30c13-2 bKCzpJ"
      id="typeRemuneration-amount"
      name="typeRemuneration"
      type="radio"
      value="total"
    />
    <label
      class="sc-f2c30c13-0 ebobyG"
      for="typeRemuneration-amount"
    >
      <span>
        En indiquant le
        <strong>
           montant total 
        </strong>
        des rémunérations.
      </span>
    </label>
  </div>
  <div
    class="sc-f2c30c13-1 cRwNeF"
  >
    <input
      class="sc-f2c30c13-2 bKCzpJ"
      id="typeRemuneration-pay"
      name="typeRemuneration"
      type="radio"
      value="mensuel"
    />
    <label
      class="sc-f2c30c13-0 ebobyG"
      for="typeRemuneration-pay"
    >
      <span>
        En indiquant le
        <strong>
           salaire mensuel 
        </strong>
         pour chaque mois.
      </span>
    </label>
  </div>
  <legend
    class="sc-7b4bcbaf-0 iaxPSC sc-fb2bdc6b-0 cWKeit"
    data-testid="question-label"
    for="currency-1"
  >
    <span
      class="sc-3633cc97-0 eiVtrx"
    >
      Quelle est la rémunération totale brute perçue durant le contrat de travail ?
      <span
        class="sc-3633cc97-0 hpZWjW"
      >
         (obligatoire)
      </span>
    </span>
  </legend>
  <div
    class="sc-d7c10f93-0 kgLXdV"
  >
    <div
      class="sc-669fe731-0 amSvQ"
    >
      <input
        class="sc-669fe731-1 htKjGt"
        id="currency-1"
        name="salaire"
        type="number"
        value="3000"
      />
      <div
        class="sc-669fe731-2 kODRkJ"
      >
        <span>
          €
        </span>
      </div>
    </div>
  </div>
  <p
    class="sc-967f95b8-4 bNAzKG"
  >
    Majorations, indemnités, primes et accessoires compris sauf les remboursements de frais et l’indemnité de congés payés.
  </p>
</div>
`;
